# airflow-plugin-echo

./: .gitignore  README.md  pyproject.toml
src/airflow/plugin/: echo.py
tests/: test_airflow_plugin_echo.py
